objects/Developer__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age calculation</description>
    <formula>YEAR (TODAY()) - YEAR(DOB__c) -
IF(MONTH (TODAY()) &lt; MONTH (DOB__c)  || 
 (MONTH (TODAY())= MONTH(DOB__c) &amp;&amp; DAY(TODAY()) &lt; DAY(DOB__c)),
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age Calculation as per DOB</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>