objects/Developer__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <referenceTo>Manager__c</referenceTo>
    <relationshipLabel>Developers (Manager)</relationshipLabel>
    <relationshipName>Developers1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>