objects/Developer__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <label>Organisation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>