objects/Developer__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Location of the Manager</description>
    <label>Work Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Developers (Work Location)</relationshipLabel>
    <relationshipName>Developers1</relationshipName>
    <type>Lookup</type>
</CustomField>